# wayplover

./: .env  .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: BuildNix.yml  rust.yml
migrations/2021-07-19-004029_create_dictionary/: down.sql  up.sql
src/: _workers.rs  console.rs  editor.rs  events.rs  main.rs  models.rs  schema.rs  steno.rs  ui.rs  utils.rs  worker.rs  workers.rs
src/workers/: mod.rs  serial.rs  sound.rs  window.rs
