[package]
name = "wayplover"
description = "Steno Stoke Interpreter"
version = "0.1.1"
license = "MIT"
edition = "2018"
homepage = "https://www.github.com/Travisdavis-ops/wayplover"
repository = "https://www.github.com/Travisdavis-ops/wayplover"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4.0"
evdev = "0.11.0"
tui = "0.15"
termion = "1.5"
rodio = "0.14.0"
clap = "2.33.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
json = "0.12.4"
regex = "1.5.4"
