[package]
description = "Steno Stoke Interpreter"
edition = "2018"
homepage = "https://www.github.com/Travisdavis-ops/wayplover"
license = "MIT"
name = "wayplover"
readme = "README.md"
repository = "https://www.github.com/Travisdavis-ops/wayplover"
version = "0.1.2"

[dependencies]
clap = "2.33.3"
evdev = "0.11.0"
json = "0.12.4"
lazy_static = "1.4.0"
maplit = "1.0.2"
regex = "1.5.4"
rodio = "0.14.0"
serial = "0.4.0"
termion = "1.5"
tts = "0.17.3"
tui = "0.15"
